# SSMR

./: Cargo.toml  README.md
benches/: speed.rs
examples/: research.rs
src/: check.rs  hashbase.rs  lib.rs  primes.rs
