[package]
name = "ssmr"
version = "1.0.0"
edition = "2021"
author = ["JASory j_a_sory@protonmail.com"]
description = "Single-Shot Miller-Rabin primality test for small integers"
repository = "https://github.com/JASory/SSMR"
keywords = ["no-std","primality", "prime", "number-theory"]
categories = ["no-std","mathematics"]
license = "CC0-1.0"
readme = "README.md"


[dependencies]

[profile.dev]
panic = "abort"


[profile.release]
panic = "abort" 

[[bench]]
name = "speed"
harness=false
